fix(OMN-1680): Address PR #47 code review feedback and fix pre-existing test failures
PR #47 Review Fixes:
- Fix comment categorizations in models/__init__.py and __init__.py
- Add no-op promotion skip logic (0 rows = no event emitted)
- Add test for no-op promotion skip behavior
- Add comprehensive exception handling to handler_compute.py
- Add pytest markers and fix license headers in test files
- Fix test_promotion_integration.py assertions and docstrings

Pre-existing Test Fixes:
- Rename 'config' to 'options' in pattern_extraction_compute contract and models
- Add ast.Subscript handling in test_node_purity.py for generic types

Tickets created for remaining architectural issues:
- OMN-1757: Refactor imperative nodes to declarative pattern
- OMN-1758: Fix contract name mismatches

--- a/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
@@ -31,7 +31,7 @@ operations:
     input_fields:
       - session_snapshots
       - existing_insights
-      - config
+      - options
       - correlation_id
     output_fields:
       - success
@@ -43,7 +43,7 @@ operations:
     description: "Extract file access patterns (co-access, entry points, modification clusters)"
     input_fields:
       - session_snapshots
-      - config
+      - options
     output_fields:
       - file_patterns
       - confidence_scores
@@ -51,7 +51,7 @@ operations:
     description: "Extract error patterns (error-prone files, fix sequences, tool failures)"
     input_fields:
       - session_snapshots
-      - config
+      - options
     output_fields:
       - error_patterns
       - confidence_scores
@@ -59,7 +59,7 @@ operations:
     description: "Extract architecture patterns (module boundaries, layers, dependency chains)"
     input_fields:
       - session_snapshots
-      - config
+      - options
     output_fields:
       - architecture_patterns
       - confidence_scores
@@ -67,7 +67,7 @@ operations:
     description: "Extract tool usage patterns (sequences, preferences, success rates)"
     input_fields:
       - session_snapshots
-      - config
+      - options
     output_fields:
       - tool_patterns
       - confidence_scores
