feat(OMN-1763): Wire pattern_feedback_effect to consume session-outcome events
Configure pattern_feedback_effect node to consume session-outcome events
from omniclaude via Kafka subscription.

Changes:
- Bump omnibase-core to ^0.11.0 for ClaudeSessionOutcome schema
- Add event_bus subscription to onex.cmd.omniintelligence.session-outcome.v1
- Replace input model with ClaudeSessionOutcome (shared schema)
- Add boundary mapping functions (_outcome_to_success, event_to_handler_args)
- Update node.execute() to accept ClaudeSessionOutcome and map to handler args
- Add comprehensive unit tests for boundary mapping (25 tests)
- Add integration tests with EventBusInmemory harness (8 tests)
- Mark DLQ tests as skipped (infrastructure not yet wired)

The handler logic remains unchanged - mapping happens at the boundary:
- ClaudeCodeSessionOutcome.SUCCESS → success=True
- All other outcomes → success=False

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -137,6 +137,26 @@ error_handling:
       retry_strategy: "none"
 
 # =============================================================================
+# EVENT BUS SUBCONTRACT - Runtime Routing Layer
+# =============================================================================
+event_bus:
+  version:
+    major: 1
+    minor: 0
+    patch: 0
+  event_bus_enabled: true
+
+  subscribe_topics:
+    - "onex.cmd.omniintelligence.session-outcome.v1"
+
+  publish_topics: []
+
+  subscribe_topic_metadata:
+    "onex.cmd.omniintelligence.session-outcome.v1":
+      schema_ref: "omnibase_core.integrations.claude_code.ClaudeSessionOutcome"
+      description: "Session outcome events from omniclaude SessionEnd hook"
+
+# =============================================================================
 # CAPABILITIES
 # =============================================================================
 capabilities:
