refactor(OMN-1763): Remove legacy ModelSessionOutcomeRequest backward compatibility
Delete unnecessary backward compatibility layer:
- Remove ModelSessionOutcomeRequest class entirely
- Remove to_claude_session_outcome() conversion method
- Update contract.yaml input_model to reference ClaudeSessionOutcome directly
- Clean up __all__ exports to use canonical types from omnibase_core
- Fix __all__ alphabetical ordering in handlers

No backward compatibility needed - use ClaudeSessionOutcome directly.

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -36,9 +36,9 @@ description: >
   data for pattern learning and confidence scoring nodes.
 # Strongly typed I/O models
 input_model:
-  name: "ModelSessionOutcomeRequest"
-  module: "omniintelligence.nodes.node_pattern_feedback_effect.models"
-  description: "Input model for session outcome recording requests."
+  name: "ClaudeSessionOutcome"
+  module: "omnibase_core.integrations.claude_code"
+  description: "Session outcome event from Claude Code sessions."
 output_model:
   name: "ModelSessionOutcomeResult"
   module: "omniintelligence.nodes.node_pattern_feedback_effect.models"
@@ -58,7 +58,7 @@ output_model:
 #     - Returns counts of updated records
 #
 # Execution Flow:
-#   1. Receive ModelSessionOutcomeRequest with session_id, success, failure_reason
+#   1. Receive ClaudeSessionOutcome event with session_id, outcome, error
 #   2. Find all pattern_injections for this session that haven't been processed
 #   3. Mark injections as recorded with the outcome
 #   4. Update rolling_20 metrics for all unique patterns involved (decay approximation)
