--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -539,11 +539,53 @@ jobs:
           uv run python -m omniintelligence.audit.io_audit \
             --whitelist tests/audit/io_audit_whitelist.yaml
 
+  # Cross-repo validation - enforces architectural boundaries
+  # Prevents direct Kafka imports in nodes/ (must use Protocol abstractions)
+  # Reference: ARCH-002 "Runtime owns all Kafka plumbing"
+  cross-repo-validation:
+    name: Cross-Repo Validation
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: ${{ env.UV_VERSION }}
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: >-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('**/uv.lock') }}-
+            ${{ env.CACHE_VERSION }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/uv.lock') }}-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
+      - name: Install dependencies
+        run: uv sync --group core
+
+      - name: Run cross-repo validation
+        run: |
+          echo "Running cross-repo validation (Kafka import guard)..."
+          uv run python -m omnibase_core.validation.cross_repo --policy .cross-repo-policy.yaml
+
   # Summary job - aggregates all job results
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit]
+    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit, cross-repo-validation]
     if: always()
 
     steps:
@@ -556,6 +598,7 @@ jobs:
           unittest="${{ needs.test-unit.result }}"
           contracts="${{ needs.contract-validation.result }}"
           ioaudit="${{ needs.io-audit.result }}"
+          crossrepo="${{ needs.cross-repo-validation.result }}"
           production_code_changed="${{ needs.changes.outputs.production_code }}"
 
           # Status emoji mapping
@@ -623,6 +666,7 @@ jobs:
           echo "| Unit Tests | $(get_status_icon $unittest) | \`$unittest\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Contract Validation | $(get_status_icon $contracts) | \`$contracts\` |" >> $GITHUB_STEP_SUMMARY
           echo "| I/O Audit | $(get_status_icon $ioaudit) | \`$ioaudit\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Cross-Repo Validation | $(get_status_icon $crossrepo) | \`$crossrepo\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
           # Overall status - production code jobs can be skipped if no relevant changes
@@ -632,7 +676,8 @@ jobs:
              is_acceptable "$typecheck" "true" && \
              is_acceptable "$unittest" "true" && \
              is_acceptable "$contracts" "false" && \
-             is_acceptable "$ioaudit" "false"; then
+             is_acceptable "$ioaudit" "false" && \
+             is_acceptable "$crossrepo" "false"; then
             echo "### :rocket: All CI checks passed!" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Ready for review and merge." >> $GITHUB_STEP_SUMMARY
