fix(OMN-1780): Add scalar result models and fix contract return types
- Create ModelExistsResult, ModelIdResult, ModelVersionResult, ModelTimestampResult
  for scalar database queries that return 1-2 columns
- Update contract YAML to use correct return models for check_exists,
  check_exists_by_id, get_latest_version, get_stored_at operations
- Make superseded_by optional in set_not_current operation (adapter passes None)
- Move import copy to module level in adapter
- Document hardcoded domain_version and domain_candidates values

--- a/src/omniintelligence/repositories/learned_patterns.repository.yaml
+++ b/src/omniintelligence/repositories/learned_patterns.repository.yaml
@@ -29,6 +29,10 @@ db_repository:
   models:
     PatternRow: omniintelligence.models.repository:ModelLearnedPatternRow
     PatternInjection: omniintelligence.models.repository:ModelPatternForInjection
+    ExistsResult: omniintelligence.models.repository:ModelExistsResult
+    IdResult: omniintelligence.models.repository:ModelIdResult
+    VersionResult: omniintelligence.models.repository:ModelVersionResult
+    TimestampResult: omniintelligence.models.repository:ModelTimestampResult
 
   # =============================================================================
   # OPERATIONS
@@ -417,8 +421,8 @@ db_repository:
         superseded_by:
           name: superseded_by
           param_type: string
-          required: true
-          description: UUID of new pattern version
+          required: false
+          description: UUID of new pattern version. Null when called before new version ID is known.
       returns:
         model_ref: PatternRow
         many: false
@@ -560,7 +564,7 @@ db_repository:
           param_type: integer
           required: true
       returns:
-        model_ref: PatternRow
+        model_ref: ExistsResult
         many: false
 
     # -------------------------------------------------------------------------
@@ -586,7 +590,7 @@ db_repository:
           param_type: string
           required: true
       returns:
-        model_ref: PatternRow
+        model_ref: IdResult
         many: false
 
     # -------------------------------------------------------------------------
@@ -612,7 +616,7 @@ db_repository:
           param_type: string
           required: true
       returns:
-        model_ref: PatternRow
+        model_ref: VersionResult
         many: false
 
     # -------------------------------------------------------------------------
@@ -633,5 +637,5 @@ db_repository:
           param_type: string
           required: true
       returns:
-        model_ref: PatternRow
+        model_ref: TimestampResult
         many: false
