feat(OMN-1829): Wire Kafka event consumption for effect nodes
Add __main__.py entry points for real Kafka event consumption:

- node_claude_hook_event_effect: Consumes claude-hook-event.v1,
  publishes intent-classified.v1
- node_pattern_feedback_effect: Consumes session-outcome.v1,
  updates pattern metrics in PostgreSQL

Both nodes use EventBusKafka.default() for environment-based config.

Also updates io_audit_whitelist.yaml to allow net-client imports in
entry point scripts (they need to create DB/Kafka connections).

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -54,12 +54,13 @@ files:
       - "file-io"
 
   # Node entry points (__main__.py) - these are CLI runners, not pure nodes
-  # They legitimately read env vars (LOG_LEVEL, HEALTH_PORT) to configure
-  # the node before instantiation. This is standard entrypoint behavior.
+  # They legitimately read env vars (LOG_LEVEL, KAFKA_*, POSTGRES_*) to configure
+  # the node before instantiation and create infrastructure connections.
   - path: "src/omniintelligence/nodes/*/__main__.py"
-    reason: "Entry point scripts bootstrap nodes and require env var configuration"
+    reason: "Entry point scripts bootstrap nodes, require env vars and infrastructure clients"
     allowed_rules:
       - "env-access"
+      - "net-client"
 
 # Example of a legacy node pending refactor
 # - path: "src/omniintelligence/nodes/legacy_*.py"
