fix(OMN-1780): Use typed metadata model and contract defaults
- Replace metadata: dict[str, Any] with TypedDictPatternStorageMetadata
  from omnibase_core for proper typing in protocol and adapter
- Remove hardcoded values from adapter (domain_version, domain_candidates,
  recurrence_count) - contract YAML is now single source of truth
- Add _build_positional_args() helper to apply contract defaults for
  optional params not explicitly provided
- Change domain_version from required to optional with default "1.0"
- Update test mocks to use TypedDictPatternStorageMetadata

--- a/src/omniintelligence/repositories/learned_patterns.repository.yaml
+++ b/src/omniintelligence/repositories/learned_patterns.repository.yaml
@@ -344,9 +344,14 @@ db_repository:
         domain_version:
           name: domain_version
           param_type: string
-          required: true
+          required: false
+          default: "1.0"
           min_length: 1
           max_length: 20
+          description: |
+            Schema version within a domain. Tracks domain schema evolution,
+            not individual pattern versions (use `version` field for that).
+            Defaults to "1.0" for new patterns.
         domain_candidates:
           name: domain_candidates
           param_type: string
