refactor(OMN-1829): Remove ad-hoc __main__.py, document RuntimeHostProcess pattern
Remove incorrect ad-hoc entry points from effect nodes. Nodes should not
have __main__.py files - they are discovered via contract.yaml and run
by RuntimeHostProcess from omnibase_infra.

Changes:
- Delete node_claude_hook_event_effect/__main__.py
- Delete node_pattern_feedback_effect/__main__.py
- Add "Running Nodes" section to CLAUDE.md explaining:
  - Why nodes don't have __main__.py
  - How to use RuntimeHostProcess correctly
  - Contract configuration for event bus discovery
  - Testing patterns without RuntimeHostProcess
- Fix kafka_producer fixture in integration tests
- Add SESSION_OUTCOME topic constant

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -275,4 +275,5 @@ markers = [
     "integration: marks tests as integration tests",
     "performance: marks tests as performance benchmarks",
     "unit: marks tests as unit tests",
+    "audit: marks tests as I/O audit enforcement tests",
 ]
