fix(OMN-1780): Address code review feedback and fix pre-existing test failures
Code Review Fixes:
- Add protocol conformance check for AdapterPatternStore
- Convert TODO(OMN-XXXX) placeholders to Future: comments
- Add signature field to lineage-related debug logs

Pre-existing Test Failures Fixed:
- Update 4 contract names to match directory names (node_* prefix)
- Mark 9 nodes as stubs (is_stub: ClassVar[bool] = True) for purity compliance
- Update test_generate_node_report.py expectations for stub nodes

All 1628 unit tests now pass.

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -12,9 +12,9 @@
 # Reference: OMN-1678 - Rolling window metric updates for session outcomes
 
 # Contract identifiers
-name: "pattern_feedback_effect"
-contract_name: "pattern_feedback_effect"
-node_name: "pattern_feedback_effect"
+name: "node_pattern_feedback_effect"
+contract_name: "node_pattern_feedback_effect"
+node_name: "node_pattern_feedback_effect"
 contract_version:
   major: 1
   minor: 0
