--- a/src/omniintelligence/nodes/node_quality_scoring_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_quality_scoring_compute/contract.yaml
@@ -13,7 +13,7 @@ node_version:
   major: 1
   minor: 0
   patch: 0
-name: "quality_scoring_compute"
+name: "node_quality_scoring_compute"
 node_type: "COMPUTE_GENERIC"
 description: >-
   Compute node for scoring code quality across multiple dimensions. Calculates maintainability, complexity,
