--- a/src/omniintelligence/repositories/learned_patterns.repository.yaml
+++ b/src/omniintelligence/repositories/learned_patterns.repository.yaml
@@ -165,6 +165,7 @@ db_repository:
           required: true
           min_length: 1
           max_length: 50
+          description: Domain identifier to filter patterns by
         limit:
           name: limit
           param_type: integer
@@ -172,12 +173,14 @@ db_repository:
           default: 50
           ge: 1
           le: 200
+          description: Maximum number of patterns to return
         offset:
           name: offset
           param_type: integer
           required: false
           default: 0
           ge: 0
+          description: Number of patterns to skip for pagination
       returns:
         model_ref: PatternSummary
         many: true
@@ -208,18 +211,21 @@ db_repository:
           default: 0.7
           ge: 0.0
           le: 1.0
+          description: Minimum quality score threshold for promotion eligibility
         min_days:
           name: min_days
           param_type: integer
           required: false
           default: 3
           ge: 1
+          description: Minimum distinct days the pattern must have been seen
         min_recurrence:
           name: min_recurrence
           param_type: integer
           required: false
           default: 5
           ge: 1
+          description: Minimum number of times the pattern must have recurred
         limit:
           name: limit
           param_type: integer
@@ -227,6 +233,7 @@ db_repository:
           default: 50
           ge: 1
           le: 200
+          description: Maximum number of candidates to return
       returns:
         model_ref: PatternRow
         many: true
@@ -260,12 +267,14 @@ db_repository:
           required: false
           default: 3
           ge: 1
+          description: Failure streak threshold that triggers demotion consideration
         min_injections:
           name: min_injections
           param_type: integer
           required: false
           default: 5
           ge: 1
+          description: Minimum injection count required to evaluate failure rate
         max_failure_rate:
           name: max_failure_rate
           param_type: number
@@ -273,6 +282,7 @@ db_repository:
           default: 0.5
           ge: 0.0
           le: 1.0
+          description: Maximum allowed failure rate before demotion consideration
         limit:
           name: limit
           param_type: integer
@@ -280,6 +290,7 @@ db_repository:
           default: 50
           ge: 1
           le: 200
+          description: Maximum number of candidates to return
       returns:
         model_ref: PatternRow
         many: true
@@ -346,6 +357,7 @@ db_repository:
           required: true
           min_length: 1
           max_length: 50
+          description: Domain identifier for the pattern
         domain_version:
           name: domain_version
           param_type: string
@@ -374,6 +386,7 @@ db_repository:
           required: true
           ge: 0.5
           le: 1.0
+          description: Confidence score for the pattern (0.5-1.0)
         quality_score:
           name: quality_score
           param_type: number
@@ -387,6 +400,7 @@ db_repository:
           param_type: string
           required: false
           default: "candidate"
+          description: Initial lifecycle status for the pattern
         source_session_ids:
           name: source_session_ids
           param_type: string
@@ -398,12 +412,15 @@ db_repository:
           required: false
           default: 1
           ge: 1
+          description: Number of times this pattern has been observed
         version:
           name: version
           param_type: integer
           required: false
           default: 1
           ge: 1
+          description: Version number for this pattern within its lineage
+          description: Version number for this pattern within its lineage
         supersedes:
           name: supersedes
           param_type: string
@@ -434,10 +451,12 @@ db_repository:
           name: signature
           param_type: string
           required: true
+          description: Pattern signature text to match
         domain_id:
           name: domain_id
           param_type: string
           required: true
+          description: Domain identifier to match
         superseded_by:
           name: superseded_by
           param_type: string
@@ -466,10 +485,12 @@ db_repository:
           name: pattern_id
           param_type: string
           required: true
+          description: Pattern UUID to update
         new_status:
           name: new_status
           param_type: string
           required: true
+          description: New lifecycle status for the pattern
         deprecation_reason:
           name: deprecation_reason
           param_type: string
@@ -510,6 +531,7 @@ db_repository:
           name: pattern_id
           param_type: string
           required: true
+          description: Pattern UUID to record outcome for
         success:
           name: success
           param_type: boolean
@@ -537,6 +559,7 @@ db_repository:
           name: pattern_id
           param_type: string
           required: true
+          description: Pattern UUID to store compiled snippet for
         snippet:
           name: snippet
           param_type: string
@@ -578,14 +601,17 @@ db_repository:
           name: domain_id
           param_type: string
           required: true
+          description: Domain identifier for lineage lookup
         signature:
           name: signature
           param_type: string
           required: true
+          description: Pattern signature text for lineage lookup
         version:
           name: version
           param_type: integer
           required: true
+          description: Version number to check existence for
       returns:
         model_ref: ExistsResult
         many: false
@@ -608,10 +634,12 @@ db_repository:
           name: pattern_id
           param_type: string
           required: true
+          description: Pattern UUID to check existence for
         signature:
           name: signature
           param_type: string
           required: true
+          description: Pattern signature for idempotency verification
       returns:
         model_ref: IdResult
         many: false
@@ -634,10 +662,12 @@ db_repository:
           name: domain_id
           param_type: string
           required: true
+          description: Domain identifier for lineage lookup
         signature:
           name: signature
           param_type: string
           required: true
+          description: Pattern signature text for lineage lookup
       returns:
         model_ref: VersionResult
         many: false
@@ -659,6 +689,7 @@ db_repository:
           name: pattern_id
           param_type: string
           required: true
+          description: Pattern UUID to get timestamp for
       returns:
         model_ref: TimestampResult
         many: false
@@ -761,6 +792,7 @@ db_repository:
           required: true
           ge: 0.5
           le: 1.0
+          description: Confidence score for the pattern (0.5-1.0)
         quality_score:
           name: quality_score
           param_type: number
@@ -774,6 +806,7 @@ db_repository:
           param_type: string
           required: false
           default: "candidate"
+          description: Initial lifecycle status for the pattern
         source_session_ids:
           name: source_session_ids
           param_type: string
@@ -785,6 +818,7 @@ db_repository:
           required: false
           default: 1
           ge: 1
+          description: Number of times this pattern has been observed
         version:
           name: version
           param_type: integer
