--- a/src/omniintelligence/repositories/learned_patterns.repository.yaml
+++ b/src/omniintelligence/repositories/learned_patterns.repository.yaml
@@ -12,6 +12,28 @@
 #   - validator_db_table_access: SQL only touches declared tables
 #   - validator_db_deterministic: many:true requires ORDER BY
 #   - validator_db_params: All :params defined, no unused
+#
+# =============================================================================
+# SIGNATURE FIELDS
+# =============================================================================
+#
+# This table uses TWO signature-related fields for different purposes:
+#
+#   pattern_signature (TEXT):
+#     - Raw, human-readable signature text
+#     - Used for debugging, display, and auditing
+#     - May contain whitespace variations, formatting differences
+#     - NOT suitable for lineage identity (can vary for same logical pattern)
+#
+#   signature_hash (VARCHAR(64)):
+#     - SHA256 hash of canonicalized signature
+#     - Stable identity key for pattern lineage
+#     - Used in WHERE clauses for version lookups, existence checks
+#     - Guarantees consistent lineage even if raw signature formatting varies
+#
+# Rule: All lineage operations (version transitions, existence checks, lineage
+# lookups) MUST use signature_hash. Use pattern_signature only for display.
+#
 
 db_repository:
   name: learned_patterns
@@ -55,6 +77,7 @@ db_repository:
         SELECT
           id,
           pattern_signature,
+          signature_hash,
           domain_id,
           compiled_snippet,
           quality_score,
@@ -103,25 +126,26 @@ db_repository:
         many: false
 
     # -------------------------------------------------------------------------
-    # READ: Get current pattern for lineage (same signature)
+    # READ: Get current pattern for lineage (same signature_hash)
     # -------------------------------------------------------------------------
     get_latest_by_lineage:
       mode: read
       description: |
-        Get the current (latest) version of a pattern by its signature.
+        Get the current (latest) version of a pattern by its signature hash.
         Used to check if a pattern already exists before storing.
+        Uses signature_hash for stable lineage identity.
       sql: |
         SELECT *
         FROM learned_patterns
-        WHERE pattern_signature = :signature
+        WHERE signature_hash = :signature_hash
           AND domain_id = :domain_id
           AND is_current = TRUE
       params:
-        signature:
-          name: signature
+        signature_hash:
+          name: signature_hash
           param_type: string
           required: true
-          description: Pattern signature text
+          description: SHA256 hash of canonicalized signature for stable lineage identity
         domain_id:
           name: domain_id
           param_type: string
@@ -145,6 +169,7 @@ db_repository:
         SELECT
           id,
           pattern_signature,
+          signature_hash,
           domain_id,
           quality_score,
           confidence,
@@ -307,10 +332,14 @@ db_repository:
 
         Note: created_at and updated_at columns rely on database defaults
         (DEFAULT NOW()) and are not explicitly set by this operation.
+
+        Stores both pattern_signature (raw text) and signature_hash (SHA256)
+        for lineage tracking. The signature_hash is used for lineage lookups.
       sql: |
         INSERT INTO learned_patterns (
           id,
           pattern_signature,
+          signature_hash,
           domain_id,
           domain_version,
           domain_candidates,
@@ -326,6 +355,7 @@ db_repository:
         ) VALUES (
           :id,
           :signature,
+          :signature_hash,
           :domain_id,
           :domain_version,
           :domain_candidates,
@@ -350,7 +380,12 @@ db_repository:
           name: signature
           param_type: string
           required: true
-          description: Pattern signature text
+          description: Pattern signature text (raw, human-readable)
+        signature_hash:
+          name: signature_hash
+          param_type: string
+          required: true
+          description: SHA256 hash of canonicalized signature for stable lineage identity
         domain_id:
           name: domain_id
           param_type: string
@@ -437,20 +472,21 @@ db_repository:
       description: |
         Mark existing versions as not current before inserting new version.
         Called before store_pattern when updating an existing pattern.
+        Uses signature_hash for stable lineage identity lookup.
       sql: |
         UPDATE learned_patterns
         SET is_current = FALSE,
             superseded_by = :superseded_by
-        WHERE pattern_signature = :signature
+        WHERE signature_hash = :signature_hash
           AND domain_id = :domain_id
           AND is_current = TRUE
         RETURNING id
       params:
-        signature:
-          name: signature
+        signature_hash:
+          name: signature_hash
           param_type: string
           required: true
-          description: Pattern signature text to match
+          description: SHA256 hash of canonicalized signature for stable lineage identity
         domain_id:
           name: domain_id
           param_type: string
@@ -579,6 +615,7 @@ db_repository:
     # =========================================================================
     # These operations support the ProtocolPatternStore interface for
     # idempotent storage, version management, and lineage tracking.
+    # All lineage operations use signature_hash for stable identity.
 
     # -------------------------------------------------------------------------
     # READ: Check if pattern exists by lineage and version
@@ -588,11 +625,12 @@ db_repository:
       description: |
         Check if a pattern already exists for the given lineage and version.
         Used for idempotency checking before storage.
+        Uses signature_hash for stable lineage identity lookup.
       sql: |
         SELECT EXISTS(
           SELECT 1 FROM learned_patterns
           WHERE domain_id = :domain_id
-            AND pattern_signature = :signature
+            AND signature_hash = :signature_hash
             AND version = :version
         ) AS exists
       params:
@@ -601,11 +639,11 @@ db_repository:
           param_type: string
           required: true
           description: Domain identifier for lineage lookup
-        signature:
-          name: signature
+        signature_hash:
+          name: signature_hash
           param_type: string
           required: true
-          description: Pattern signature text for lineage lookup
+          description: SHA256 hash of canonicalized signature for stable lineage identity
         version:
           name: version
           param_type: integer
@@ -621,24 +659,25 @@ db_repository:
     check_exists_by_id:
       mode: read
       description: |
-        Check if a pattern exists by idempotency key (pattern_id, signature).
+        Check if a pattern exists by idempotency key (pattern_id, signature_hash).
         If found, returns the stored pattern ID for idempotent response.
+        Uses signature_hash for stable lineage identity verification.
       sql: |
         SELECT id
         FROM learned_patterns
         WHERE id = :pattern_id
-          AND pattern_signature = :signature
+          AND signature_hash = :signature_hash
       params:
         pattern_id:
           name: pattern_id
           param_type: string
           required: true
           description: Pattern UUID to check existence for
-        signature:
-          name: signature
+        signature_hash:
+          name: signature_hash
           param_type: string
           required: true
-          description: Pattern signature for idempotency verification
+          description: SHA256 hash of canonicalized signature for stable lineage identity
       returns:
         model_ref: IdResult
         many: false
@@ -651,22 +690,23 @@ db_repository:
       description: |
         Get the latest version number for a pattern lineage.
         Used to determine the next version number when storing a new pattern.
+        Uses signature_hash for stable lineage identity lookup.
       sql: |
         SELECT MAX(version) AS version
         FROM learned_patterns
         WHERE domain_id = :domain_id
-          AND pattern_signature = :signature
+          AND signature_hash = :signature_hash
       params:
         domain_id:
           name: domain_id
           param_type: string
           required: true
           description: Domain identifier for lineage lookup
-        signature:
-          name: signature
+        signature_hash:
+          name: signature_hash
           param_type: string
           required: true
-          description: Pattern signature text for lineage lookup
+          description: SHA256 hash of canonicalized signature for stable lineage identity
       returns:
         model_ref: VersionResult
         many: false
@@ -703,12 +743,15 @@ db_repository:
         Uses CTE to guarantee both UPDATE and INSERT succeed or neither takes effect.
         Prevents invariant violation where lineage has no current version.
         PREFERRED method for storing new versions. Use store_pattern for first version only.
+
+        Uses signature_hash for stable lineage identity in the CTE WHERE clause.
+        Stores both pattern_signature (raw text) and signature_hash (SHA256).
       sql: |
         WITH deactivated AS (
           UPDATE learned_patterns
           SET is_current = FALSE,
               superseded_by = :id
-          WHERE pattern_signature = :signature
+          WHERE signature_hash = :signature_hash
             AND domain_id = :domain_id
             AND is_current = TRUE
           RETURNING id
@@ -716,6 +759,7 @@ db_repository:
         INSERT INTO learned_patterns (
           id,
           pattern_signature,
+          signature_hash,
           domain_id,
           domain_version,
           domain_candidates,
@@ -731,6 +775,7 @@ db_repository:
         ) VALUES (
           :id,
           :signature,
+          :signature_hash,
           :domain_id,
           :domain_version,
           :domain_candidates,
@@ -755,7 +800,12 @@ db_repository:
           name: signature
           param_type: string
           required: true
-          description: Pattern signature text (used for lineage lookup)
+          description: Pattern signature text (raw, human-readable)
+        signature_hash:
+          name: signature_hash
+          param_type: string
+          required: true
+          description: SHA256 hash of canonicalized signature for stable lineage identity
         domain_id:
           name: domain_id
           param_type: string
