fix(OMN-1800): Address PR #58 review feedback and CI failures
- Fix conftest.py signature pattern to match test_e2e_% for cleanup
- Correct AdapterPatternStore import path (adapters → repositories)
- Harden test_tc4 cleanup to require explicit pattern IDs with verification
- Replace no-op assertion in test_tc2 with meaningful learned/candidate checks
- Rewrite test_tc3 threshold test to exercise 3 thresholds (0.3, 0.85, 0.99)
- Add io-audit whitelist for __main__.py entry point env var access

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -53,6 +53,14 @@ files:
       - "env-access"
       - "file-io"
 
+  # This is the proper location for bootstrap configuration - values are then
+  # passed to nodes via constructor injection, maintaining node purity.
+  - path: "src/omniintelligence/nodes/*/__main__.py"
+    # Entry point files (__main__.py) are allowed to read environment variables.
+    reason: "Entry point files bootstrap configuration from environment variables"
+    allowed_rules:
+      - "env-access"
+
 # Example of a legacy node pending refactor
 # - path: "src/omniintelligence/nodes/legacy_*.py"
 #   reason: "Legacy nodes pending refactor - tracked in OMN-XXX"
