fix(OMN-1805): Address all PR review feedback
Major fixes:
- Change ON DELETE CASCADE to RESTRICT on audit table
- Use EnumPatternLifecycleStatus for lifecycle fields with type safety
- Fix Kafka optionality - effect nodes no longer block on Kafka
- Include kafka_producer_unavailable results (not dropped)
- Fix routing strategy to operation_type_match for effect node
- Record idempotency key AFTER success (not before)
- Add external conn parameter and transaction wrapping
- Wrap Kafka publish in try/except with DLQ fallback
- Remove hardcoded "dev" defaults for topic_env_prefix
- Add structured error for invalid UUID pattern_id
- Add fallback SQL for promotions when Kafka unavailable

Minor fixes:
- Remove stray magic token from contract.yaml
- Reject empty trigger strings with validation
- Fix file read error handling in audit scan
- Enforce timezone-aware transition_at with AwareDatetime

Style/nitpick fixes:
- Move ModelGateSnapshot to shared domain module (fixes circular import)
- Remove unused TYPE_CHECKING imports
- Remove __all__ from test modules
- Standardize model_config to use ConfigDict() syntax
- Update tests for enum case sensitivity

Ticket: OMN-1805

--- a/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
@@ -37,7 +37,7 @@ description: >
   intents from the reducer containing pattern_id, from_status, to_status, trigger, and request_id (idempotency
   key). Atomically updates learned_patterns.status (with status guard) and inserts audit record into pattern_lifecycle_transitions
   table. Provides PROVISIONAL guard to reject legacy provisional state transitions. Uses request_id-based
-  idempotency to prevent duplicate transitions. #magic___^_^___line
+  idempotency to prevent duplicate transitions.
 # =============================================================================
 # I/O MODELS
 # =============================================================================
@@ -55,12 +55,14 @@ output_model:
 # HANDLER ROUTING
 # =============================================================================
 handler_routing:
-  routing_strategy: "single_entry"
-  entry_point:
-    function: "apply_transition"
-    module: "omniintelligence.nodes.node_pattern_lifecycle_effect.handlers.handler_transition"
-    type: "async"
-    description: "Apply pattern status transition with idempotency, status guard, and atomic audit"
+  routing_strategy: "operation_type_match"
+  handlers:
+    - operation: "apply_transition"
+      handler:
+        function: "apply_transition"
+        module: "omniintelligence.nodes.node_pattern_lifecycle_effect.handlers.handler_transition"
+        type: "async"
+        description: "Apply pattern status transition with idempotency, status guard, and atomic audit"
 
 # =============================================================================
 # IO OPERATIONS
