fix(review): [major] Remove invalid candidate -> provisional FSM transition
PROVISIONAL is a legacy status - only outbound transitions allowed.
The effect handler's PROVISIONAL guard (handler_transition.py) correctly
rejects all inbound transitions to PROVISIONAL, but the contract.yaml
and reducer handler still defined candidate -> provisional.

This mismatch would cause runtime failures where:
1. Reducer approves transition (contract.yaml says valid)
2. Effect rejects it (PROVISIONAL guard blocks)
3. Valid lifecycle events blocked, breaking pattern promotion

Fixed:
- contract.yaml: Removed candidate -> provisional transition (lines 381-387)
- handler_pattern_lifecycle.py: Removed from VALID_TRANSITIONS dict
- Updated 88 tests to use promote_direct instead of validation_passed
- Updated conftest.py defaults to use valid transition

New lifecycle paths:
- candidate -> validated (via promote_direct)
- candidate -> deprecated (via deprecate)
- Legacy: provisional -> validated (via promote, outbound only)

Review iteration: 1/10

--- a/src/omniintelligence/nodes/node_intelligence_reducer/contract.yaml
+++ b/src/omniintelligence/nodes/node_intelligence_reducer/contract.yaml
@@ -378,13 +378,10 @@ state_machine:
         - action_name: "clear_state"
           action_type: "state_update"
     # PATTERN_LIFECYCLE transitions (OMN-1805)
-    - from_state: "candidate"
-      to_state: "provisional"
-      trigger: "validation_passed"
-      description: "Initial quality threshold met"
-      actions:
-        - action_name: "emit_status_update_intent"
-          action_type: "intent_emission"
+    # NOTE: candidate → provisional transition REMOVED (OMN-1805 PR review)
+    # The PROVISIONAL status is LEGACY - only outbound transitions allowed.
+    # New patterns use: candidate → validated (via promote_direct)
+    # or stay at: candidate → deprecated (via deprecate)
     - from_state: "provisional"
       to_state: "validated"
       trigger: "promote"
